# Path-Tracer

./: .clang-format  CMakeLists.txt  README.md
src/: camera.h  color.h  hittable.h  interval.h  main.cpp  material.h  ray.h  sphere.h  vec3.h
src/cpu/: aabb.h  bvh.h  hittable.h  hittable_list.h  interval.h  main.cpp  rtweekend.h  sphere.h
src/gpu/: Shaders.metal  main.cpp
src/gpu/Shaders/: Camera.metal  Hittable.metal  Material.metal  RNG.metal  Ray.metal  Shaders.metal  Sphere.metal  Utils.metal
